@@ -4,6 +4,8 @@ Version 1.2
 [X] - Use BCrypt as the internal password hash and increase the file format number to 1.1. Old files of version 1.0
       are backwards compatible. They will get saved automatically to version 1.1.
 
+[X] - Made password 2 optional. I still recommend using 2 passwords, but you don't have too.
+
 [X] - Enter on first field on passwords entry dialog box moves focus to second field. Enter on second
       field is the same as clicking the OK button.
 
